# wordnet2db

./: .gitignore  Cargo.toml  LICENSE  README.md  dictionary.json
src/: main.rs
src/db_handler/: mod.rs
src/dictionary_handler/: mod.rs
src/file_handler/: mod.rs
