[package]
name = "wordnet2db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
regex = "1.10.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive", "std"] }
serde_json = "1.0.120"
